explore fluent builder options